# EPHERA-AI

./: .env.example  .gitignore  AGENTS.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/admin-console/: next.config.ts  package.json
apps/compliance-console/: package.json
apps/consumer-pwa/: next.config.ts  package.json
apps/merchant-web/: next.config.ts  package.json
apps/mobile/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  theme.ts  tsconfig.json
apps/provider-portal/: next.config.ts  package.json
docs/: ARCHITECTURE.md  TRUST.md
docs/adr/: 0001-ledger-is-sole-balance-authority.md  0002-authorisation-is-a-verifiable-credential.md  0003-service-topology.md  0004-voice-proposes-never-authorises.md  0005-money-is-integer-minor-units.md  0006-transfer-state-machine.md  0007-evidence-is-append-only.md  0008-no-in-memory-regulated-state.md  0009-simulated-surfaces-must-be-labelled.md  README.md
docs/architecture/: trust-boundaries.md
docs/brand/: SYSTEM.md
docs/design/: money-path-settlement.md
docs/gates/: G0-baseline.md  G0-deviation-register.md  G1-report.md  G2-report.md  (+3 more)
infrastructure/: docker-compose.yml
native/financial-core/: Cargo.toml
native/financial-core/src/: lib.rs  money.rs  policy.rs  posting.rs
notebooks/: fraud-detection-ieee-cis.ipynb
scripts/: db-migrate.sh  run-compliance-risk.sh  run-identity-access.sh  run-ledger-api.sh  run-payments-api.sh  run-payments-worker.sh  run-voice-intent.sh  verify-trust-claims.sh
(+338 files in other folders)
