[package]
name = "ephera-financial-core"
version = "0.1.0"
edition = "2021"
description = "EPHERA double-entry ledger primitives and offline helpers (not the system of record alone)"
license = "UNLICENSED"
publish = false

[lib]
name = "ephera_financial_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1"
